# TCS-t1

./: .gitignore  CMakeLists.txt
app/: sim
app/bubble/: app.mak  bubble.c
app/hello/: app.mak  hello.c
platform/single_core/: image.cnt  image.lst  image.sec  image.txt  makefile  sim
